force-app/main/default/objects/Section__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Section_Administrator__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>