force-app/main/default/objects/Section__c/fields/Contact_County__c.field-meta.xml
<CustomField>
    <fullName>Contact_County__c</fullName>
    <formula>Section_Administrator__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact County</label>
    <type>Text</type>
</CustomField>