force-app/main/default/objects/Section__c/fields/Contact_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Postcode__c</fullName>
    <formula>Section_Administrator__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Postcode</label>
    <type>Text</type>
</CustomField>