force-app/main/default/objects/Section__c/fields/Contact_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Town_City__c</fullName>
    <formula>Section_Administrator__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Town/City</label>
    <type>Text</type>
</CustomField>