force-app/main/default/objects/Section__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>