force-app/main/default/objects/Section__c/fields/Office_Country__c.field-meta.xml
<CustomField>
    <fullName>Office_Country__c</fullName>
    <label>Office Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>