force-app/main/default/objects/Section__c/fields/Office_County__c.field-meta.xml
<CustomField>
    <fullName>Office_County__c</fullName>
    <label>Office County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>