force-app/main/default/objects/Section__c/fields/Office_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Office_Postcode__c</fullName>
    <label>Office Postcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>