force-app/main/default/objects/Section__c/fields/Office_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Office_Town_City__c</fullName>
    <label>Office Town/City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>