force-app/main/default/objects/Section__c/fields/Section_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Section_Abbreviation__c</fullName>
    <label>Section Abbreviation</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>