force-app/main/default/objects/Section__c/fields/Section_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Section_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Administrator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Child</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Associate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>